@@ -20,16 +20,16 @@ public class TennisCourtSelector {
 
 
     // 室外场地 工作日
-    private static final List<Integer> OUT_DOOR_WEEKDAY_HOURS = Arrays.asList(  8, 20, 21, 22);
+    private static final List<Integer> OUT_DOOR_WEEKDAY_HOURS = List.of( 8);
 
     // 室外场地 周末
-    private static final List<Integer> OUT_DOOR_WEEKEND_HOURS = Arrays.asList(16, 17, 18, 19, 20, 21, 22);
+    private static final List<Integer> OUT_DOOR_WEEKEND_HOURS = List.of(10, 11, 12, 13, 14, 15, 16, 17);
 
     // 室内场地 工作日
-    private static final List<Integer> IN_DOOR_WEEKDAY_HOURS = Arrays.asList( 20, 21, 22);
+    private static final List<Integer> IN_DOOR_WEEKDAY_HOURS = List.of();
 
     // 室内场地 周末
-    private static final List<Integer> IN_DOOR_WEEKEND_HOURS = Arrays.asList(10,11,12,13,14,15,16, 17, 18, 19, 20, 21, 22);
+    private static final List<Integer> IN_DOOR_WEEKEND_HOURS = List.of(10,11,12,13,14,15,16,17,18);
 
 
     private static boolean checkLimit(Date date, boolean isIndoor) {
